rename to 'relaximations'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>wavy hills relaxamations</title>
+  <title>wavy hills relaximations</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
 
 
-  <h1>wavy hills relaxamations</h1>
+  <h1>wavy hills relaximations</h1>
   <div class="subtitle">by ben wilson</div>
 
   <div class="desc">Note: Right-click any of these 30-second samples and choose "Open video in a new tab" to view at full size. I recommend putting on some music you like too! Thanks for taking a look ✌</div>
